# LLM-Finetuning-Cookbook

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FILES_CREATED.md  Makefile  QUICK_START.md  README.md  RESTRUCTURE_SUMMARY.md  SETUP.md  START_HERE.md  docker-compose.yml  pyproject.toml
.github/workflows/: notebook-test.yml.example
01-Full-Fine-Tuning/: GPT-2-From-Scratch.ipynb  README.md
02-PEFT/: Falcon-7B-LoRA.ipynb  README.md
03-Instruction-Tuning/: Financial-Sentiment-OPT.ipynb  README.md  Summarization-FLAN-T5.ipynb
04-Reasoning-Tuning/: Financial-Reasoning-Gemma-3.ipynb  Math-Reasoning-Qwen-GRPO.ipynb  Qwen3-Reasoning-Conversational.ipynb  README.md
scripts/: quick-test.sh  setup-dev.sh
