[tool.poetry]
name = "llm-finetuning-cookbook"
version = "0.1.0"
description = "A hands-on, code-first collection of recipes for fine-tuning Large Language Models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/your-username/LLM-Finetuning-Cookbook"
repository = "https://github.com/your-username/LLM-Finetuning-Cookbook"
keywords = ["llm", "fine-tuning", "machine-learning", "deep-learning", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies shared across all notebooks
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.0"
# Common ML/DL dependencies
torch = "^2.1.0"
transformers = "^4.35.0"
datasets = "^2.15.0"
accelerate = "^0.25.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
tqdm = "^4.66.0"
huggingface-hub = "^0.19.0"

[tool.poetry.group.full-finetuning]
optional = true

[tool.poetry.group.full-finetuning.dependencies]
# Dependencies for 01-Full-Fine-Tuning
deeplake = "^3.8.0"
tensorboard = "^2.15.0"

[tool.poetry.group.peft]
optional = true

[tool.poetry.group.peft.dependencies]
# Dependencies for 02-PEFT
peft = "^0.7.0"
bitsandbytes = "^0.41.0"
scipy = "^1.11.0"

[tool.poetry.group.instruction-tuning]
optional = true

[tool.poetry.group.instruction-tuning.dependencies]
# Dependencies for 03-Instruction-Tuning
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
nltk = "^3.8.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.reasoning]
optional = true

[tool.poetry.group.reasoning.dependencies]
# Dependencies for 04-Reasoning-Tuning
trl = "^0.7.0"
einops = "^0.7.0"
# Note: unsloth is a specialized library, may need special installation
# Install separately: pip install "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Development dependencies
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pytest = "^7.4.0"
pre-commit = "^3.5.0"
nbstripout = "^0.6.0"

[tool.poetry.group.all]
optional = true

[tool.poetry.group.all.dependencies]
# Meta group to install everything
# This is handled by installing all other groups

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

